examples/gke/deploy-paligemma-2-with-tgi/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgi
spec:
  selector:
    app: tgi
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
